# Tickets-Proxy

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml  docker.yml
src/: bad_webhook_map.rs  main.rs
