[package]
authors = ["Twilight Contributors"]
edition = "2018"
name = "twilight-http-proxy"
version = "0.1.0"

[dependencies]
dashmap = "4.0"
http = "0.2"
hyper = { version = "0.14", features = ["tcp", "server", "client", "http1", "http2"] }
hyper-rustls = { version = "0.22", default-features = false, features = ["webpki-tokio"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.2"
twilight-http = { version = "0.6.1", default-features = false, features = ["rustls-webpki-roots"] }
prometheus = { version = "0.11", optional = true }
lazy_static = { version = "1.4", optional = true }

[features]
default = []
expose-metrics = ["prometheus", "lazy_static"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
